--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href = "about.html" class = "current">About</a></li>
       <li><a href = "aesthetics.html">Aesthetics</a></li>
-      <li><a href = "home.html">Home</a></li>
+      <li><a href = "index.html">Index</a></li>
       <li><a href = "research.html">Research</a></li>
       <li><a href = "residency.html">Residency</a></li>
     </ul>
