--- a/aesthetics.html
+++ b/aesthetics.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href = "about.html" >About</a></li>
         <li><a href = "aesthetics.html" class = "current" >Aesthetics</a></li>
-        <li><a href = "home.html">Home</a></li>
+        <li><a href = "index.html">Index</a></li>
         <li><a href = "research.html">Research</a></li>
         <li><a href = "residency.html">Residency</a></li>
       </ul>
