--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="#content" class="skip">Skip to content</a>
   <nav>
     <ul>
-      <li><a href = "index.html" class = "current">Home</a></li>
+      <li><a href = "index.html" class = "current">Index</a></li>
       <li><a href = "about.html" >About</a></li>
       <li><a href = "aesthetics.html">Aesthetics</a></li>
       <li><a href = "research.html">Research</a></li>
