--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href = "about.html">About</a></li>
           <li><a href = "aesthetics.html">Aesthetics</a></li>
-          <li><a href = "home.html">Home</a></li>
+          <li><a href = "index.html">Index</a></li>
           <li><a href = "research.html" class = "current">Research</a></li>
           <li><a href = "residency.html">Residency</a></li>
         </ul>
