--- a/residency.html
+++ b/residency.html
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href = "home.html" >Home</a></li>
+          <li><a href = "index.html" >Index</a></li>
           <li><a href = "about.html" >About</a></li>
           <li><a href = "aesthetics.html">Aesthetics</a></li>
           <li><a href = "research.html">Research</a></li>
