--- a/aesthetics.html
+++ b/aesthetics.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/">
     <link rel= "stylesheet" type= "text/css" href="css/style.css">
-    <title></title>
+    <title>Aesthetics</title>
   </head>
   <header>
     <a href="#content" class="skip">Skip to content</a>
