--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/">
     <link rel= "stylesheet" type= "text/css" href="css/style.css">
-    <title></title>
+    <title>Research</title>
   </head>
   <header>
     <header>
